--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,55 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+<html lang="en">
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Welcome!{% endblock %}</title>
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
+    {% block stylesheets %}
+        {{ encore_entry_link_tags('app') }}
+    {% endblock %}
+
+    {% block javascripts %}
+        {{ encore_entry_script_tags('app') }}
+    {% endblock %}
+
+</head>
+
+<body class='homepage'>
+
+    <header id="header">
+
+        <a href="homepage.php" id="logo">
+            <img src="https://picsum.photos/80" alt="">
+        </a>
+
+        <nav>
+            <ul>
+                <li><a href="/figure/">Home</a></li>
+                <li><a href="/figure/">Tricks</a></li>
+                <li><a href="homepage.php">SignIn</a></li>
+                <li><a href="homepage.php">SignUp</a></li>
+
+            </ul>
+
+        </nav>
+
+    </header>
+
+    <section id="container">
         {% block body %}{% endblock %}
-    </body>
+
+
+    </section>
+
+    <footer id="footer">
+
+        <span id="copyright">copyright 2021</span>
+
+    </footer>
+
+</body>
+
 </html>
