--- a/templates/figure/index.html.twig
+++ b/templates/figure/index.html.twig
@@ -3,6 +3,102 @@
 {% block title %}Figure index{% endblock %}
 
 {% block body %}
+
+    <div id="teaser" style="background-image:url('https://picsum.photos/1400/800')">
+
+        <div class="hero">
+            <h1>Phrase d'accroche</h1>
+        </div>
+
+        <a id="scrollDown"><i class="fas fa-arrow-down"></i></a>
+
+    </div>
+
+    <div id="tricks">
+
+        <div class="tricklist">
+
+            <div id="" class="trick card">
+
+                <div class="innerCard">
+
+                    <img src="https://picsum.photos/270/200" alt="">
+
+                    <h3><a href="trick.php">Tail grab</a></h3>
+
+                </div>
+
+            </div>
+            <div id="" class="trick card">
+
+                <div class="innerCard">
+
+                    <img src="https://picsum.photos/270/200" alt="">
+
+                    <h3><a href="trick.php">Tail grab</a></h3>
+
+                </div>
+
+            </div>
+            <div id="" class="trick card">
+
+                <div class="innerCard">
+
+                    <img src="https://picsum.photos/270/200" alt="">
+
+                    <h3><a href="trick.php">Tail grab</a></h3>
+
+                </div>
+
+            </div>
+            <div id="" class="trick card">
+
+                <div class="innerCard">
+
+                    <img src="https://picsum.photos/270/200" alt="">
+
+                    <h3><a href="trick.php">Tail grab</a></h3>
+
+                </div>
+
+            </div>
+            <div id="" class="trick card">
+
+                <div class="innerCard">
+
+                    <img src="https://picsum.photos/300/200" alt="">
+
+                    <h3><a href="trick.php">Tail grab</a></h3>
+
+                </div>
+
+            </div>
+            <div id="" class="trick card">
+
+                <div class="innerCard">
+
+                    <img src="https://picsum.photos/300/200" alt="">
+
+                    <h3><a href="trick.php">Tail grab</a></h3>
+
+                </div>
+
+            </div>
+
+        </div>
+
+        <a href="#" class="loadMore btn">LoadMore</a>
+
+
+        <a id="scrollUp"><i class="fas fa-arrow-up"></i></a>
+
+    </div>
+
+
+
+
+
+
     <h1>Figure index</h1>
 
     <table class="table">
