--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,7 +28,7 @@
         <nav>
             <ul>
                 <li><a href="/figure/">Home</a></li>
-                <li><a href="/figure/">Tricks</a></li>
+                <li><a href="/figure/#tricks">Tricks</a></li>
                 <li><a href="homepage.php">SignIn</a></li>
                 <li><a href="homepage.php">SignUp</a></li>
 
