liip imagine bundle

--- a/templates/image/show.html.twig
+++ b/templates/image/show.html.twig
@@ -17,7 +17,7 @@
             </tr>
             <tr>
                 <th>Filename</th>
-                <td><img src="{{ asset('uploads/images/' ~  image.filename) }}"/></td>
+                <td><img src="{{ asset(image.filePath)|imagine_filter('trick_thumbnail') }}"/></td>
             </tr>
 
 
