--- a/templates/image/index.html.twig
+++ b/templates/image/index.html.twig
@@ -19,7 +19,7 @@
             <tr>
                 <td>{{ image.id }}</td>
                 <td>{{ image.name }}</td>
-                <td>{{ image.filename }}</td>
+                <td>{{ image.filename }}</t
                 <td>
                     <a href="{{ path('image_show', {'id': image.id}) }}">show</a>
                     <a href="{{ path('image_edit', {'id': image.id}) }}">edit</a>
