--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -15,7 +15,7 @@ body{margin:0}
 #teaser {position: relative; height: calc(100vh - 158px); background-repeat: no-repeat; background-size: cover; background-position:center;
     display: flex; flex-direction: column; justify-content: center; align-items: center; }
 
-#scrollDown, #scrollUp{position: absolute; bottom: 0; right:0; color:#000; font-size: 70px; margin: 0.5em; padding: 0.5em;}
+#scrollDown, #scrollUp{position: absolute; bottom: 0; right:0; color:#000; font-size: 70px; margin: 0.5em; padding: 0.5em; text-shadow: 1px 1px #fff;}
 
 /* Tricks */
 
