--- a/templates/figure/index.html.twig
+++ b/templates/figure/index.html.twig
@@ -4,6 +4,8 @@
 
 {% block body %}
 
+<section id="container">
+
     <div id="teaser" style="background-image:url('https://picsum.photos/1400/800')">
 
         <div class="hero">
@@ -24,7 +26,7 @@
 
                     <img src="https://picsum.photos/270/200" alt="">
 
-                    <h3><a href="trick.php">Tail grab</a></h3>
+                    <h3><a href="fig1">Tail grab</a></h3>
 
                 </div>
 
@@ -95,10 +97,6 @@
     </div>
 
 
-
-
-
-
     <h1>Figure index</h1>
 
     <table class="table">
@@ -123,7 +121,7 @@
                 <td>{{ figure.createdAt ? figure.createdAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>{{ figure.updatedAt ? figure.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
-                    <a href="{{ path('figure_show', {'id': figure.id}) }}">show</a>
+                    <a href="{{ path('figure_show', {'slug': figure.slug}) }}">show</a>
                     <a href="{{ path('figure_edit', {'id': figure.id}) }}">edit</a>
                 </td>
             </tr>
@@ -136,4 +134,6 @@
     </table>
 
     <a href="{{ path('figure_new') }}">Create new</a>
+
+</section>
 {% endblock %}
