--- a/templates/figure/show.html.twig
+++ b/templates/figure/show.html.twig
@@ -69,15 +69,18 @@
 
                 </div>
 
-                <div class="figure">
+                {% for video in figure.videos %}
 
-                    <div class="inner video-container">
+                    <div class="figure">
 
-                        <iframe id="ytplayer" type="text/html" width="300" height="168" src="https://www.youtube.com/embed/M7lc1UVf-VE" frameborder="0" allowfullscreen></iframe>
+                        <div class="inner video-container">
+
+                            <iframe width="320" height="180" src="{{ video.tag|raw }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
 
                     </div>
 
-                </div>
+                {% endfor %}
 
             </div>
 
