composer & symfony update

--- a/templates/figure/show.html.twig
+++ b/templates/figure/show.html.twig
@@ -94,8 +94,8 @@
 
             <div id="infos">
                 <div class="info">grabs</div>
-                <div class="info date"><span>Créé le : </span>{{ figure.createdAt|format_datetime(pattern="d MMM Y") }}</div>
-                <div class="info date"><span>Mis à jour le : </span>{{ figure.updatedAt|format_datetime(pattern="d MMM Y") }}</div>
+                <div class="info date"><span>Créé le : </span>{{ figure.createdAt|format_datetime(pattern="d MMM yyyy") }}</div>
+                <div class="info date"><span>Mis à jour le : </span>{{ figure.updatedAt|format_datetime(pattern="d MMM yyyy") }}</div>
                 <div class="action edit"><button><a class="btn" href="{{ path('figure_edit', {'id': figure.id}) }}">edit</a></button></div>
                 <div class="action delete">{{ include('figure/_delete_form.html.twig') }}</div>
             </div>
