--- a/templates/figure/show.html.twig
+++ b/templates/figure/show.html.twig
@@ -93,7 +93,7 @@
         <aside id="aside">
 
             <div id="infos">
-                <div class="info">grabs</div>
+                <div class="info">{{ figure.group.name }}</div>
                 <div class="info date"><span>Créé le : </span>{{ figure.createdAt|format_datetime(pattern="d MMM yyyy") }}</div>
                 <div class="info date"><span>Mis à jour le : </span>{{ figure.updatedAt|format_datetime(pattern="d MMM yyyy") }}</div>
                 <div class="action edit"><button><a class="btn" href="{{ path('figure_edit', {'id': figure.id}) }}">edit</a></button></div>
@@ -189,6 +189,10 @@
             <tr>
                 <th>Slug</th>
                 <td>{{ figure.slug }}</td>
+            </tr>
+            <tr>
+                <th>Group</th>
+                <td>{{ figure.group.name }}</td>
             </tr>
             <tr>
                 <th>CreatedAt</th>
