--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -31,6 +31,9 @@ body{margin:0}
 
 /* Components */
 
+.alert{
+    position: absolute; z-index: 1; padding: 1em; margin: 1em; right: 0; background-color: greenyellow; border-radius: 4px; }
+
 .btn{}
 
 /* Page Tricks */
