--- a/templates/figure/show.html.twig
+++ b/templates/figure/show.html.twig
@@ -16,11 +16,11 @@
 
         <a id="seeAllMedia" class="btn">See All Media</a>
 
-        <div id="figures">
+        <div id="medias">
 
             <div class="list">
 
-                <div id="" class="figure">
+                <div id="" class="media picture">
 
                     <div class="inner">
 
@@ -29,17 +29,7 @@
                     </div>
 
                 </div>
-                <div id="" class="figure">
-
-                    <div class="inner">
-
-                        <img src="https://picsum.photos/300/168" alt="">
-
-                    </div>
-
-                </div>
-
-                <div id="" class="figure">
+                <div id="" class="media picture">
 
                     <div class="inner">
 
@@ -49,7 +39,7 @@
 
                 </div>
 
-                <div id="" class="figure">
+                <div id="" class="media picture">
 
                     <div class="inner">
 
@@ -59,7 +49,17 @@
 
                 </div>
 
-                <div id="" class="figure">
+                <div id="" class="media picture">
+
+                    <div class="inner">
+
+                        <img src="https://picsum.photos/300/168" alt="">
+
+                    </div>
+
+                </div>
+
+                <div id="" class="media picture">
 
                     <div class="inner">
 
@@ -71,7 +71,7 @@
 
                 {% for video in figure.videos %}
 
-                    <div class="figure">
+                    <div class="media video">
 
                         <div class="inner video-container">
 
