--- a/templates/figure/edit.html.twig
+++ b/templates/figure/edit.html.twig
@@ -22,11 +22,11 @@
 
         <a id="seeAllMedia" class="btn">See All Media</a>
 
-        <div id="figures">
+        <div id="medias">
 
             <div class="list pictures">
 
-                <div id="" class="figure">
+                <div id="" class="media picture">
 
                     <div class="inner">
 
@@ -39,21 +39,7 @@
                     </div>
 
                 </div>
-                <div id="" class="figure">
-
-                    <div class="inner">
-
-                        <img src="https://picsum.photos/300/168" alt="">
-                        <div class="controls">
-                            <a href="#" class="control"><i class="fas fa-pencil-alt"></i></a>
-                            <a href="#" class="control"><i class="fas fa-trash-alt"></i></a>
-                        </div>
-
-                    </div>
-
-                </div>
-
-                <div id="" class="figure">
+                <div id="" class="media picture">
 
                     <div class="inner">
 
@@ -67,7 +53,7 @@
 
                 </div>
 
-                <div id="" class="figure">
+                <div id="" class="media picture">
 
                     <div class="inner">
 
@@ -81,7 +67,21 @@
 
                 </div>
 
-                <div id="" class="figure">
+                <div id="" class="media picture">
+
+                    <div class="inner">
+
+                        <img src="https://picsum.photos/300/168" alt="">
+                        <div class="controls">
+                            <a href="#" class="control"><i class="fas fa-pencil-alt"></i></a>
+                            <a href="#" class="control"><i class="fas fa-trash-alt"></i></a>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div id="" class="media picture">
 
                     <div class="inner">
 
@@ -101,7 +101,7 @@
 
                 {% for video in form.videos %}
 
-                    <div class="figure">
+                    <div class="media video">
 
                         <div class="inner video-container">
 
@@ -112,8 +112,8 @@
                         <div class="edit">{{ form_row(video.tag) }}</div>
 
                         <div class="controls">
-                            <a href="#" class="control"><i class="fas fa-pencil-alt"></i></a>
-                            <a href="#" class="control"><i class="fas fa-trash-alt"></i></a>
+                            <a href="#" class="control update"><i class="fas fa-pencil-alt"></i></a>
+                            <a href="#" class="control delete"><i class="fas fa-trash-alt"></i></a>
                         </div>
 
                     </div>
