--- a/templates/figure/show.html.twig
+++ b/templates/figure/show.html.twig
@@ -205,7 +205,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('figure_index') }}">back to list</a>
+   <button class="btn"> <a href="{{ path('figure_index') }}">Retour à la liste</a></button>
 
 
 {% endblock %}
