--- a/templates/figure/index.html.twig
+++ b/templates/figure/index.html.twig
@@ -2,6 +2,11 @@
 
 {% block title %}Figure index{% endblock %}
 
+{% block javascripts %}
+    {{ parent() }}
+    {{ encore_entry_script_tags('home') }}
+{% endblock %}
+
 {% block body %}
 
 <section id="container">
