--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -21,12 +21,10 @@ body{margin:0}
 /* Tricks */
 
 #tricks{position: relative; min-height: 100vh; padding-top:1em}
-
 .tricklist{display: flex; flex-wrap: wrap; margin: 1em;}
-
 .tricklist .trick .innerCard{width: 90%; margin:0 auto}
-
 .tricklist .trick .innerCard img{width: 100%;}
+.tricklist .trick .innerCard .links{ display: flex; justify-content: space-between;}
 
 .btn.loadMore{margin: 1em auto; width:max-content; display: block;}
 
@@ -55,7 +53,7 @@ body.trick::before {
 
 
 #sheet{width: 80%; margin: 4em auto 0;}
-#sheet #mainPicture h1{position:absolute; width:300px; top:40%; left:50%; margin-left:-150px;text-align: center}
+#sheet #mainPicture #mainText{position:absolute; width:300px; top:40%; left:50%; margin-left:-150px;text-align: center}
 #sheet #mainPicture img{width: 100%;}
 
 #seeAllMedia{ display: none;}
@@ -104,6 +102,12 @@ body.figure-edition #medias .media .controls {justify-content: center;top: 0; ri
 body.figure-edition textarea{width: 100%; padding: 2em; box-sizing: border-box;}
 body.figure-edition .list.videos .video .edit {display:none}
 body.figure-edition .list.videos .video .edit.visible {display:block}
+
+/* Page trick create */
+body.figure_creation #medias .media .controls {justify-content: center;top: 0; right: 0;}
+body.figure_creation textarea{width: 100%; padding: 2em; box-sizing: border-box;}
+body.figure_creation #mainPicture{ background-image: linear-gradient(silver,silver); min-height: 600px; }
+
 
 
 
