--- a/templates/figure/new.html.twig
+++ b/templates/figure/new.html.twig
@@ -3,9 +3,74 @@
 {% block title %}New Figure{% endblock %}
 
 {% block body %}
-    <h1>Create new Figure</h1>
 
-    {{ include('figure/_form.html.twig') }}
+    <section id="sheet">
 
-    <a href="{{ path('figure_index') }}">back to list</a>
+        {{ form_start(form) }}
+
+        <div id="mainPicture">
+
+            <h2 id="mainText">{{ form_row(form.name) }}</h2>
+
+            <div class="controls">
+                <a href="#" class="control"><i class="fas fa-plus"></i></a>
+            </div>
+
+        </div>
+
+        <a id="seeAllMedia" class="btn">See All Media</a>
+
+        <div id="medias">
+
+            <div class="list pictures">
+
+                <div id="" class="media picture">
+
+                    <div class="inner">
+
+                        <img src="https://picsum.photos/300/168" alt="">
+                        <div class="controls">
+                            <a href="#" class="control"><i class="fas fa-pencil-alt"></i></a>
+                            <a href="#" class="control"><i class="fas fa-trash-alt"></i></a>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+            {{ form_label(form.videos) }}
+            {{ form_errors(form.videos) }}
+
+            <div class="list videos"  data-prototype="{{ form_widget(form.videos.vars.prototype)|e('html_attr') }}"></div>
+
+            {{ form_widget(form.videos) }}
+
+            <button type="button" class="add_item_link btn" id="add_video" data-collection-holder-class="videos">Ajouter une video</button>
+
+        </div>
+
+        <article id="">
+            <p>{{ form_label(form.text) }}</p>
+            <p>{{ form_errors(form.text) }}</p>
+            <p>{{ form_widget(form.text) }}</p>
+        </article>
+
+        <aside id="">
+
+            <div id="infos">
+                {{ form_row(form.group) }}
+            </div>
+
+        </aside>
+
+        <button class="btn">{{ button_label|default('Save') }}</button>
+
+        {{ form_end(form) }}
+
+        <button class="btn"><a href="{{ path('figure_index') }}">Retour à la liste</a></button>
+
+    </section>
+
 {% endblock %}
